updated about us page

--- a/index.html
+++ b/index.html
@@ -209,16 +209,16 @@
     <section class="ftco-section ftco-about">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
+					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/About_us.png);">
 					</div>
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
-	            <h2 class="mb-4">Welcome to Carbook</h2>
+	            <h2 class="mb-4">Welcome to CIPC Campus</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
+	            <p>The Chartered Institute of Psychology & Counselling offers globally recognized programs in Sri Lanka, preparing future psychotherapists through top-tier education and international partnerships.</p>
+	            <p>With over 11 years of experience in the Sri Lankan education sector, we are dedicated to delivering a high-quality learning experience. Our institute is equipped with modern international facilities, a highly qualified lecturing staff, and a supportive academic environment that ensures students gain both theoretical knowledge and practical skills to excel in their careers.</p>
+	            <p><a href="about.html" class="btn btn-primary py-3 px-4">About Us...</a></p>
 	          </div>
 					</div>
 				</div>
@@ -230,7 +230,7 @@
 				<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Services</span>
-            <h2 class="mb-3">Our Latest Services</h2>
+            <h2 class="mb-3">Our Services</h2>
           </div>
         </div>
 				<div class="row">
