--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	            		<span class="ion-ios-play"></span>
 	            	</div>
 	            	<div class="heading-title ml-5">
-		            	<span>Easy steps for renting a car</span>
+		            	<span>About Our Campus</span>
 	            	</div>
 	            </a>
             </div>
@@ -297,7 +297,7 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Testimonial</span>
-            <h2 class="mb-3">Happy Clients</h2>
+            <h2 class="mb-3">Happy Students</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -305,23 +305,23 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/About_us.png)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
+                    <p class="mb-4">The workshop on mindfulness was incredibly enlightening. The strategies I learned are now part of my daily routine.</p>
+                    <p class="name">Supuni Weerakon</p>
+                    <span class="position">Workshop Attendee</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_2.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/About_us.png)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Interface Designer</span>
+                    <p class="mb-4">The sessions have been life-changing! I've learned so much about managing stress and building better relationships.</p>
+                    <p class="name">Nethmi Kaumadhi</p>
+                    <span class="position">Psychology Student</span>
                   </div>
                 </div>
               </div>
@@ -330,9 +330,9 @@
                   <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">UI Designer</span>
+                    <p class="mb-4">The practical exercises were engaging and effective.I feel equipped to handle life's challenges with confidence.</p>
+                    <p class="name">Udith Kulathunge</p>
+                    <span class="position">Counseling Graduate</span>
                   </div>
                 </div>
               </div>
@@ -341,20 +341,9 @@
                   <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">System Analyst</span>
+                    <p class="mb-4">This program helped me discover my inner strengths and guided me towards a healthier mindset. Highly recommended!</p>
+                    <p class="name">Supun Kalhara</p>
+                    <span class="position">Mental Health Advocate</span>
                   </div>
                 </div>
               </div>
@@ -364,7 +353,7 @@
       </div>
     </section>
 
-    <section class="ftco-section">
+    <!-- <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -420,7 +409,7 @@
           </div>
         </div>
       </div>
-    </section>	
+    </section>	 -->
 
     <section class="ftco-counter ftco-section img bg-light" id="section-counter">
 			<div class="overlay"></div>
@@ -468,7 +457,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2"><a href="#" class="logo">CIPC <span>Campus</span></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Begin higher studies at home with convenient online programs designed to fit your schedule and help you achieve your goals.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -505,8 +494,8 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">No 198, Mihiraniya Street, Colombo 12</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+94 743 354 555</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
 	            </div>
@@ -517,7 +506,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy; 2014 All rights reserved | CIPC Campus 
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
