--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	          <li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li>
+	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
+	          <li class="nav-item"><a href="car.html" class="nav-link">Courses</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
@@ -50,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/About_us.png');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -65,29 +65,29 @@
     <section class="ftco-section ftco-about">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
+					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/About_us.png);">
 					</div>
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
-	            <h2 class="mb-4">Welcome to Carbook</h2>
+	            <h2 class="mb-4">Welcome to CIPC Campus</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
+	            <p>The Chartered Institute of Psychology & Counselling offers globally recognized programs in Sri Lanka, preparing future psychotherapists through top-tier education and international partnerships.</p>
+	            <p>With over 11 years of experience in the Sri Lankan education sector, we are dedicated to delivering a high-quality learning experience. Our institute is equipped with modern international facilities, a highly qualified lecturing staff, and a supportive academic environment that ensures students gain both theoretical knowledge and practical skills to excel in their careers.</p>
+	            <p><a href="about.html" class="btn btn-primary py-3 px-4">About Us...</a></p>
 	          </div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-intro" style="background-image: url(images/bg_3.jpg);">
+		<section class="ftco-section ftco-intro" style="background-image: url(images/Learn.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row justify-content-end">
 					<div class="col-md-6 heading-section heading-section-white ftco-animate">
-            <h2 class="mb-3">Do You Want To Earn With Us? So Don't Be Late.</h2>
-            <a href="#" class="btn btn-primary btn-lg">Become A Driver</a>
+            <h2 class="mb-3">Do You Want To Learn With Us? So Don't Be Late.</h2>
+            <a href="#" class="btn btn-primary btn-lg">Join With Us</a>
           </div>
 				</div>
 			</div>
@@ -99,7 +99,7 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Testimonial</span>
-            <h2 class="mb-3">Happy Clients</h2>
+            <h2 class="mb-3">Happy Students</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -107,23 +107,23 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/About_us.png)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
+                    <p class="mb-4">The workshop on mindfulness was incredibly enlightening. The strategies I learned are now part of my daily routine.</p>
+                    <p class="name">Supuni Weerakon</p>
+                    <span class="position">Workshop Attendee</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_2.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/About_us.png)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Interface Designer</span>
+                    <p class="mb-4">The sessions have been life-changing! I've learned so much about managing stress and building better relationships.</p>
+                    <p class="name">Nethmi Kaumadhi</p>
+                    <span class="position">Psychology Student</span>
                   </div>
                 </div>
               </div>
@@ -132,9 +132,9 @@
                   <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">UI Designer</span>
+                    <p class="mb-4">The practical exercises were engaging and effective.I feel equipped to handle life's challenges with confidence.</p>
+                    <p class="name">Udith Kulathunge</p>
+                    <span class="position">Counseling Graduate</span>
                   </div>
                 </div>
               </div>
@@ -143,20 +143,9 @@
                   <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
                   </div>
                   <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">System Analyst</span>
+                    <p class="mb-4">This program helped me discover my inner strengths and guided me towards a healthier mindset. Highly recommended!</p>
+                    <p class="name">Supun Kalhara</p>
+                    <span class="position">Mental Health Advocate</span>
                   </div>
                 </div>
               </div>
@@ -166,14 +155,14 @@
       </div>
     </section>
 
-    <section class="ftco-counter ftco-section img" id="section-counter">
+    <section class="ftco-counter ftco-section img bg-light" id="section-counter">
 			<div class="overlay"></div>
     	<div class="container">
     		<div class="row">
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="60">0</strong>
+                <strong class="number" data-number="11">0</strong>
                 <span>Year <br>Experienced</span>
               </div>
             </div>
@@ -181,8 +170,8 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="1090">0</strong>
-                <span>Total <br>Cars</span>
+                <strong class="number" data-number="190">0</strong>
+                <span>Total <br>Staff</span>
               </div>
             </div>
           </div>
@@ -190,7 +179,7 @@
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
                 <strong class="number" data-number="2590">0</strong>
-                <span>Happy <br>Customers</span>
+                <span>Total<br>Students</span>
               </div>
             </div>
           </div>
@@ -211,8 +200,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>book</span></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2"><a href="#" class="logo">CIPC <span>Campus</span></a></h2>
+              <p>Begin higher studies at home with convenient online programs designed to fit your schedule and help you achieve your goals.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -249,8 +238,8 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">No 198, Mihiraniya Street, Colombo 12</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+94 743 354 555</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
 	            </div>
@@ -261,7 +250,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy; 2014 All rights reserved | CIPC Campus 
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
