--- a/about.html
+++ b/about.html
@@ -30,14 +30,14 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Car<span>Book</span></a>
+        <div style="display: flex; align-items: center; gap: 10px;"><img src="./images/CIPC.png" alt="" style="width: 50px; border-radius: 100px;"><a class="navbar-brand" href="index.html">CIPC <span>Campus</span></a></div>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item "><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
