finished courses page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image" style="border-radius: 200px !important;" href="./images/CIPC.png" />
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -41,7 +42,7 @@
 	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
-	          <li class="nav-item"><a href="car.html" class="nav-link">Courses</a></li>
+	          <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
