--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
-	          <li class="nav-item"><a href="car.html" class="nav-link">Courses</a></li>
+	          <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
