team color changed

--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="./NewCSS/Home.css">
   </head>
   <body>
     
@@ -141,7 +143,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-2 mt" style="background-image: url(images/person_1.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">This program helped me discover my inner strengths and guided me towards a healthier mindset. Highly recommended!</p>
@@ -171,7 +173,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="190">0</strong>
+                <strong class="number" data-number="90">0</strong>
                 <span>Total <br>Staff</span>
               </div>
             </div>
@@ -187,7 +189,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text d-flex align-items-center">
-                <strong class="number" data-number="67">0</strong>
+                <strong class="number" data-number="7">0</strong>
                 <span>Total <br>Branches</span>
               </div>
             </div>
@@ -196,7 +198,7 @@
     	</div>
     </section>	
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+    <footer class="ftco-footer ftco-bg-dark ftco-section" style="margin-top: 0px;">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
