--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/cole-keister-vEgVWRBr2VY-unsplash.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/univercity.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
@@ -426,7 +426,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="190">0</strong>
+                <strong class="number" data-number="90">0</strong>
                 <span>Total <br>Staff</span>
               </div>
             </div>
@@ -442,7 +442,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text d-flex align-items-center">
-                <strong class="number" data-number="67">0</strong>
+                <strong class="number" data-number="7">0</strong>
                 <span>Total <br>Branches</span>
               </div>
             </div>
