final update before hosting

--- a/blog.html
+++ b/blog.html
@@ -39,10 +39,10 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+            <li class="nav-item active"><a href="blog.html" class="nav-link">Campus</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	          <li class="nav-item"><a href="course.html" class="nav-link">Cars</a></li>
-	          <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
+	          <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -50,13 +50,13 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/value.png');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Our Blog</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Campus <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">About Our Campus</h1>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_1.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/vission.jpg');">
               </a>
               <div class="text px-md-5 pt-4">
               	<div class="meta mb-3">
@@ -75,15 +75,15 @@
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                <h3 class="heading mt-2"><a href="#">Our Vision</a></h3>
+                <p>Our vision is to foster a supportive, inclusive, and nurturing environment where individuals feel empowered to explore their emotions, overcome life’s challenges, and pursue meaningful personal growth. We strive to create a safe space that encourages self-discovery, emotional well-being, and psychological resilience. By promoting open dialogue, empathy, and self-awareness, we aim to guide individuals toward a deeper understanding of themselves and their place in the world. Through compassionate support and professional guidance, we envision helping each person unlock their full potential and lead a more balanced, fulfilled, and emotionally enriched life.</p>
+                <!-- <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p> -->
               </div>
             </div>
           </div>
           <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_2.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/mission.jpg');">
               </a>
               <div class="text px-md-5 pt-4">
               	<div class="meta mb-3">
@@ -91,15 +91,15 @@
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                <h3 class="heading mt-2"><a href="#">Our Mission</a></h3>
+                <p>Our mission is to provide accessible, compassionate, and evidence-based psychological support to individuals from all walks of life. We are dedicated to creating a safe and supportive environment where every person feels heard, respected, and valued. By offering services grounded in the latest psychological research and best practices, we aim to empower individuals to overcome personal and emotional challenges, build resilience, and develop the skills necessary for personal growth. Through our commitment to mental well-being, we strive to help people lead healthier, more balanced, and fulfilling lives, while also promoting a deeper understanding and acceptance of mental health in society.</p>
+                <!-- <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p> -->
               </div>
             </div>
           </div>
           <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_3.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/values.jpg');">
               </a>
               <div class="text px-md-5 pt-4">
               	<div class="meta mb-3">
@@ -107,15 +107,15 @@
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                <h3 class="heading mt-2"><a href="#">Our Values</a></h3>
+                <p>At the Chartered Institute of Psychology and Counselling, we uphold core values that shape our mission and define our commitment to the field. Leadership and mentoring skills empower professionals to inspire and guide others, while teamwork fosters collaboration and shared success. We are dedicated to professionalism, consistently delivering high-quality services, and our strong adherence to ethics and integrity builds trust within our community. Staying focused on our goals and the well-being of those we serve drives our progress, while a culture of innovation ensures we remain at the forefront of psychology and counselling, embracing new ideas that enhance our impact.</p>
+                <!-- <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p> -->
               </div>
             </div>
           </div>
           <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_4.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/goals.jpg');">
               </a>
               <div class="text px-md-5 pt-4">
               	<div class="meta mb-3">
@@ -123,13 +123,13 @@
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
                 </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                <h3 class="heading mt-2"><a href="#">Our goals</a></h3>
+                <p>We provide quality education and training in Psychology and Counseling for individuals pursuing professional knowledge in mental health and related fields. Our goal is to build the skills of counselors, therapists, and organizational staff through structured programs that promote effective participation in mental health support and therapy. We enhance both individual and organizational well-being through education, training, and awareness initiatives. Our counseling and advisory services foster emotional resilience and support personal and professional growth. We also offer specialized training to meet the diverse needs of global communities and encourage innovation through advanced psychological education and research.</p>
+                <!-- <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p> -->
               </div>
             </div>
           </div>
-          <div class="col-md-12 text-center d-flex ftco-animate">
+          <!-- <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
               <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_5.jpg');">
               </a>
@@ -160,7 +160,7 @@
                 <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="row mt-5">
           <div class="col text-center">
