--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item "><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="blog.html" class="nav-link">Campus</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
 	          <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
-	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -65,10 +65,10 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-about">
+    <section class="ftco-section ftco-about" style="margin-top: 90px;">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/About_us.png);">
+					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about2.jpg);">
 					</div>
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
@@ -110,7 +110,7 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/About_us.png)">
+                  <div class="user-img mb-2" style="background-image: url(images/person_2.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">The workshop on mindfulness was incredibly enlightening. The strategies I learned are now part of my daily routine.</p>
@@ -121,7 +121,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/About_us.png)">
+                  <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">The sessions have been life-changing! I've learned so much about managing stress and building better relationships.</p>
@@ -132,7 +132,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
+                  <div class="user-img mb-2" style="background-image: url(images/person_4.jpg)">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">The practical exercises were engaging and effective.I feel equipped to handle life's challenges with confidence.</p>
@@ -216,8 +216,8 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Services</a></li>
+                <li><a href="/about.html" class="py-2 d-block">About</a></li>
+                <li><a href="/services.html" class="py-2 d-block">Services</a></li>
                 <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
                 <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
                 <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
@@ -228,11 +228,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Customer Support</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="#" class="py-2 d-block">How it works</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <!-- <li><a href="#" class="py-2 d-block">FAQ</a></li> -->
+                <!-- <li><a href="#" class="py-2 d-block">Payment Option</a></li> -->
+                <li><a href="/contact.html" class="py-2 d-block">Booking Tips</a></li>
+                <li><a href="/about.html" class="py-2 d-block">How it works</a></li>
+                <li><a href="/contact.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
