--- a/course.html
+++ b/course.html
@@ -40,10 +40,10 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+			  <li class="nav-item"><a href="blog.html" class="nav-link">Campus</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
 	          <li class="nav-item active"><a href="course.html" class="nav-link">Courses</a></li>
-	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -258,7 +258,7 @@
     </section>
     
 
-<footer class="ftco-footer ftco-bg-dark ftco-section">
+<footer class="ftco-footer ftco-bg-dark ftco-section" style="margin-top: 0px;">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
@@ -276,8 +276,8 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Services</a></li>
+                <li><a href="/about.html" class="py-2 d-block">About</a></li>
+                <li><a href="/services.html" class="py-2 d-block">Services</a></li>
                 <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
                 <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
                 <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
@@ -288,11 +288,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Customer Support</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="#" class="py-2 d-block">How it works</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <!-- <li><a href="#" class="py-2 d-block">FAQ</a></li> -->
+                <!-- <li><a href="#" class="py-2 d-block">Payment Option</a></li> -->
+                <li><a href="/contact.html" class="py-2 d-block">Booking Tips</a></li>
+                <li><a href="/about.html" class="py-2 d-block">How it works</a></li>
+                <li><a href="/contact.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -318,8 +318,7 @@
           </div>
         </div>
       </div>
-    </footer>
-        
+    </footer>        
   
 
   <!-- loader -->
